codex-rs/core/tests/suite/snapshots/all__suite__compact__pre_sampling_model_switch_compaction_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_labeled_requests_snapshot(\"Pre-sampling compaction on model switch to a smaller context window: current behavior compacts using prior-turn history only (incoming user message excluded), and the follow-up request carries compacted history plus the new user message.\",\n&[(\"Initial Request (Previous Model)\", &requests[0]),\n(\"Pre-sampling Compaction Request\", &requests[1]),\n(\"Post-Compaction Follow-up Request (Next Model)\", &requests[2]),])"
---
Scenario: Pre-sampling compaction on model switch to a smaller context window: current behavior compacts using prior-turn history only (incoming user message excluded), and the follow-up request carries compacted history plus the new user message.

## Initial Request (Previous Model)
00:message/user:<task_model_guidance>Before acting, form and maintain a working ...
01:message/developer:<PERMISSIONS_INSTRUCTIONS>
02:message/developer:<NO_TEXT>
03:message/developer:<root_orchestration_instructions>When several independent tool c...
04:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
05:message/user:before switch

## Pre-sampling Compaction Request
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <root_orchestration_instructions>When several independent tool c...
01:message/user:before switch
02:message/assistant:before switch
03:message/user:<SUMMARIZATION_PROMPT>

## Post-Compaction Follow-up Request (Next Model)
00:message/user:<task_model_guidance>Before acting, form and maintain a working ...
01:message/developer:<PERMISSIONS_INSTRUCTIONS>
02:message/developer:<NO_TEXT>
03:message/developer:<root_orchestration_instructions>When several independent tool c...
04:message/developer:<model_switch>\nThe user was previously using a different model....
05:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
06:message/user:<COMPACTION_SUMMARY>\nPRE_SAMPLING_SUMMARY
07:message/developer:<root_orchestration_instructions>When several independent tool c...
08:message/user:after switch
