codex-rs/core/tests/suite/snapshots/all__suite__compact__pre_turn_compaction_strips_incoming_model_switch_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_labeled_requests_snapshot(\"Pre-turn compaction during model switch (without pre-sampling model-switch compaction): current behavior strips incoming <model_switch> from the compact request and restores it in the post-compaction follow-up request.\",\n&[(\"Initial Request (Previous Model)\", &requests[0]),\n(\"Local Compaction Request\", &requests[1]),\n(\"Local Post-Compaction History Layout\", &requests[2]),])"
---
Scenario: Pre-turn compaction during model switch (without pre-sampling model-switch compaction): current behavior strips incoming <model_switch> from the compact request and restores it in the post-compaction follow-up request.

## Initial Request (Previous Model)
00:message/user:<task_model_guidance>Before acting, form and maintain a working ...
01:message/developer:<PERMISSIONS_INSTRUCTIONS>
02:message/developer:<NO_TEXT>
03:message/developer:<root_orchestration_instructions>When several independent tool c...
04:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
05:message/user:BEFORE_SWITCH_USER

## Local Compaction Request
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <root_orchestration_instructions>When several independent tool c...
01:message/user:BEFORE_SWITCH_USER
02:message/assistant:BEFORE_SWITCH_REPLY
03:message/user:<SUMMARIZATION_PROMPT>

## Local Post-Compaction History Layout
00:message/user:<task_model_guidance>Before acting, form and maintain a working ...
01:message/developer:<PERMISSIONS_INSTRUCTIONS>
02:message/developer:<NO_TEXT>
03:message/developer:<root_orchestration_instructions>When several independent tool c...
04:message/developer:<model_switch>\nThe user was previously using a different model....
05:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
06:message/user:<COMPACTION_SUMMARY>\nPRETURN_SWITCH_SUMMARY
07:message/developer:<root_orchestration_instructions>When several independent tool c...
08:message/user:AFTER_SWITCH_USER
